# gentlefn--gentledb4qt

./: CMakeLists.txt  GentleDB4QtConfig.cmake  README.txt  header-template.txt  qtgentledb.cpp  qtgentledb.h  qtgentledb.pro  qtgentledb_global.h  template.txt
example-gui/: CMakeLists.txt  example.cpp  example.h
include/GentleDB4Qt/: GentleDB4Qt  gentledb4qt.h  gentledb4qt_libexport.h
src/: CMakeLists.txt  GentleDB4Qt.cpp
test/: testqtgentledb.cpp  testqtgentledb.pro
